--- a/nginx-deployment-v2.yaml
+++ b/nginx-deployment-v2.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-project
+  name: nginx-project-v2
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx-project
+      app: nginx-project-v2
   template:
     metadata:
       labels:
-        app: nginx-project
+        app: nginx-project-v2
     spec:
       containers:
         - name: nginx
@@ -22,11 +22,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-svc
+  name: nginx-svc-v2
 spec:
   type: NodePort
   selector:
-    app: nginx-project
+    app: nginx-project-v2
   ports:
   - port: 80
     targetPort: 80
